--- a/template/package.json
+++ b/template/package.json
@@ -14,12 +14,13 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
+    "@tanstack/react-query": "^5.51.23",
     "deepmerge": "^4.3.1",
-    "expo": "51.0.12",
+    "expo": "51.0.26",
     "immer": "^10.0.4",
     "ky": "^1.2.3",
     "react": "18.2.0",
-    "react-native": "0.74.2",
+    "react-native": "0.74.5",
     "react-native-config": "^1.5.1",
     "react-native-gesture-handler": "^2.16.0",
     "react-native-paper": "^5.12.3",
@@ -33,10 +34,10 @@
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
-    "@react-native/babel-preset": "0.74.84",
-    "@react-native/eslint-config": "0.74.84",
-    "@react-native/metro-config": "0.74.84",
-    "@react-native/typescript-config": "0.74.84",
+    "@react-native/babel-preset": "0.74.87",
+    "@react-native/eslint-config": "0.74.87",
+    "@react-native/metro-config": "0.74.87",
+    "@react-native/typescript-config": "0.74.87",
     "@testing-library/jest-native": "^5.4.3",
     "@testing-library/react-native": "^12.4.5",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
@@ -54,5 +55,5 @@
   "engines": {
     "node": ">=18"
   },
-  "packageManager": "yarn@4.3.0"
+  "packageManager": "yarn@4.4.0"
 }
